--- a/_oldREST/Gemfile
+++ b/_oldREST/Gemfile
@@ -2,6 +2,9 @@ source 'https://rubygems.org'
 
 gem 'sinatra'
 gem 'multi_json'
+gem 'data_mapper'
+gem 'dm-sqlite-adapter'
+gem 'json'
 
 group :development do
   gem 'shotgun'
